--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.19.1
   firebase_auth: ^3.4.1
   firebase_database: ^9.0.18
+  intl_phone_field: ^3.1.0
 
 dev_dependencies:
   flutter_test:
