--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^3.4.1
   firebase_database: ^9.0.18
   intl_phone_field: ^3.1.0
+  date_field:
+  intl:
 
 dev_dependencies:
   flutter_test:
